--- a/food4kids/src/App.css
+++ b/food4kids/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans');
+
 img.big{
   opacity:0.95;
   width: 100%;
@@ -16,6 +18,7 @@ text-align: center;
   background-color: rgba(0,0,0, 0.4);
   color: white;
   font-weight: bold;
+  font-family: 'Fira Sans', sans-serif;
   border: 3px solid #f1f1f1;
   top: 60%;
   left: 50%;
@@ -32,8 +35,46 @@ padding-top: 2%;
   width: 100%;
   height: 400px;
 }
-.textcenter{
+.textcenter3{
+  padding-top: 2%;
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 115%;
+    font-weight: bold;
   text-align: center;
+}
+.textcenter4{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 90%;
+    color: grey;
+    font-weight: bold;
+  text-align: center;
+}
+.textcenter1{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 130%;
+    font-weight: bold;
+  text-align: center;
+}
+.textcenter2{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 125%;
+    font-weight: bold;
+  text-align: center;
+}
+.textcenter{
+    font-family: 'Fira Sans', sans-serif;
+    font-size: 300%;
+    font-weight: bold;
+  text-align: center;
+}
+.firaplain{
+      font-family: 'Fira Sans', sans-serif;
+      font-size: 120%;
+}
+.fira{
+      font-family: 'Fira Sans', sans-serif;
+      font-size: 220%;
+      font-weight: bold;
 }
 .shift{
   margin-top:2%;
@@ -93,11 +134,12 @@ html, body {
 
 
 .sectionG{
+  box-shadow: 0 -5px 5px -5px #333;
   padding-left: 10%;
   padding-right: 10%;
   position: relative;
   z-index: 0;
-  height: 500px;
+  height: 540px;
   width: 100%;
   background:#8CBE3F;
 }
@@ -106,7 +148,7 @@ html, body {
   padding-right: 10%;
   position: relative;
   z-index: 0;
-  height: 500px;
+  height: 540px;
   width: 100%;
   background:#af314e;
 }
@@ -116,17 +158,16 @@ html, body {
   padding-right: 10%;
   position: relative;
   z-index: 0;
-  height: 500px;
+  height: 540px;
   width: 100%;
   background:#F8992D;
 }
 
 .box{
+  padding-top: 2%;
   background: white;
   border-radius: 20px;
   border: black solid 1px;
-  margin-top: 5%;
-  padding-top: 5%;
 }
 
 .center{
@@ -140,7 +181,11 @@ html, body {
   top:1500px;
   left: 7%;
   border-radius: 10px;
-  padding-bottom: 1%;
+  padding-bottom: 0.5%;
+    font-weight: bold;
+        font-family: 'Fira Sans', sans-serif;
+        border:white solid 2px;
+
 }
 .center1{
   text-align:center;
@@ -153,7 +198,12 @@ html, body {
   top:1450px;
   left: 42%;
   border-radius: 10px;
-  padding-bottom: 1%;
+  padding-bottom: 0.5%;
+    font-weight: bold;
+        font-family: 'Fira Sans', sans-serif;
+                border:white solid 2px;
+
+
 }
 .center2{
   text-align:center;
@@ -166,21 +216,37 @@ html, body {
   top:1500px;
   left: 76%;
   border-radius: 10px;
-  padding-bottom: 1%;
+  padding-bottom: 0.5%;
+  font-weight: bold;
+        font-family: 'Fira Sans', sans-serif;
+                border:white solid 2px;
+
+
 }
 
 .end{
+  font-family: 'Fira Sans', sans-serif;
   color: white;
   background: black;
   height: 200px;
   width: 100%;
+  text-align: center;
+  padding-top: 5%;
 }
 
 .arrow{
-  position: relative;
-  z-index: 2;
+  position: absolute;
+  z-index: 999999;
 }
-
+.firaCart{
+          font-family: 'Fira Sans', sans-serif;
+          color: white;
+          font-weight: bold;
+          font-size: 325%;
+          padding-bottom: 2%;
+          text-align: center;
+          padding-top: 3%;
+}
 
 .slick-prev {
   color: black;
@@ -197,13 +263,36 @@ html, body {
 
 .groceries{
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+   max-width: 80%;
+  height:200px;
+}
+
+.groceries1{
+  display: block;
+   margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  height:200px;
+}
+.groceries2{
+  display: block;
+   margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height:200px;
+}
+.groceries3{
+  display: block;
    margin-left: auto;
   margin-right: auto;
   width: 80%;
   height:200px;
-
 }
+
 .cart{
   margin-left: 35%;
   margin-bottom: 5%;
 }
+
